[gd_scene load_steps=3 format=2]

[ext_resource path="res://Escenas/Tanques/Predeterminados/TanqueEnemigo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/TanqueMovimiento.gd" type="Script" id=2]

[node name="TanqueMovimiento" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TiempoCanviarDireccion" type="Timer" parent="." index="6"]
wait_time = 1.5
autostart = true

[node name="TiempoComprovarColision" type="Timer" parent="." index="7"]
wait_time = 0.2
autostart = true

[node name="TiempoMina" type="Timer" parent="." index="8"]

[connection signal="timeout" from="TiempoCanviarDireccion" to="." method="_on_TiempoCanviarDireccion_timeout"]
[connection signal="timeout" from="TiempoComprovarColision" to="." method="_on_TiempoComprovarColision_timeout"]
[connection signal="timeout" from="TiempoMina" to="." method="_on_TiempoMina_timeout"]
